do config: typescript, babel, webpack, styled-components, linting

--- a/.babelrc.json
+++ b/.babelrc.json
@@ -6,7 +6,11 @@
         "targets": "defaults"
       }
     ],
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "babel-plugin-styled-components"
+  ]
 }
