--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my_portfolio",
+  "name": "recipes",
   "version": "1.0.0",
   "description": "Mario Sancho-Cirer's Portolio",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "develop": "webpack serve --open --env mode=development",
     "production": "webpack serve --open --env mode=production",
@@ -12,21 +12,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/masanpoc/myportfolio.git"
+    "url": "git+https://github.com/masanpoc/recipes.git"
   },
   "keywords": [
-    "portfolio",
-    "developer",
-    "frontend",
-    "projects",
-    "aboutme"
+    "recipes",
+    "search",
+    "api",
+    "edamam",
+    "cooking"
   ],
   "author": "Mario Sancho-Cirer Poczatek",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/masanpoc/myportfolio/issues"
+    "url": "https://github.com/masanpoc/recipes/issues"
   },
-  "homepage": "https://github.com/masanpoc/myportfolio#readme",
+  "homepage": "https://github.com/masanpoc/recipes#readme",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -37,9 +37,15 @@
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.14.6",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.13.2",
     "css-loader": "^5.2.6",
     "eslint": "^7.29.0",
     "eslint-plugin-react": "^7.24.0",
@@ -50,8 +56,10 @@
     "postcss-nested": "^5.0.5",
     "postcss-simple-vars": "^6.0.3",
     "prettier": "2.3.2",
-    "tailwindcss": "^2.2.4",
+    "styled-components": "^5.3.1",
     "terser-webpack-plugin": "^5.1.4",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.4.2",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
