--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "homepage": "https://github.com/masanpoc/recipes#readme",
   "dependencies": {
     "framer-motion": "^4.1.17",
+    "ga-4-react": "^0.1.281",
     "react": "^17.0.2",
+    "react-cookie-consent": "^6.4.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0"
   },
