--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^17.0.2",
     "react-cookie-consent": "^6.4.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "recharts": "^2.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
