--- a/.babelrc.json
+++ b/.babelrc.json
@@ -11,6 +11,7 @@
   ],
   "plugins": [
     "@babel/plugin-transform-runtime",
-    "babel-plugin-styled-components"
+    "babel-plugin-styled-components",
+    "recharts"
   ]
 }
