--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "^4.30.0",
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
+    "babel-plugin-recharts": "^2.0.0",
     "babel-plugin-styled-components": "^1.13.2",
     "css-loader": "^5.2.6",
     "eslint": "^7.29.0",
